--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel = "stylesheet" href = "style/output.css"></link>
+    <link rel="stylesheet" href="style/output.css">
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="script/login.js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen font-poppins">
@@ -15,14 +16,14 @@
         <p class="text-gray-500 text-center text-md mb-6">Sign in to your Account</p>
         <form id="login-form">
             <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-medium mb-2" for="email">Username</label>
-                <input type="username" id="username" placeholder="Enter your Username" 
+                <label class="block text-gray-700 text-sm font-medium mb-2" for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Enter your Username" 
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none">
             </div>
 
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-medium mb-2" for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" 
+                <input type="password" id="password" name="password" placeholder="Enter your password" 
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none">
             </div>
 
@@ -39,11 +40,10 @@
             </button>
         </form>
 
-            <p class="text-gray-600 text-sm text-center mt-4">
-                Don't have an account? 
-                <a href="register.html" class="text-blue-500 font-medium hover:underline">Register here</a>
-            </p>
-     
+        <p class="text-gray-600 text-sm text-center mt-4">
+            Don't have an account? 
+            <a href="register.html" class="text-blue-500 font-medium hover:underline">Register here</a>
+        </p>
     </div>
 </body>
 </html>
