Saved local changes before pulling updates

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel = "stylesheet" href = "style/output.css"></link>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="script/login.js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen font-poppins">
