--- a/register.html
+++ b/register.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="style/output.css" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="script/register.js"></script>  
-      
+    <script src="script/register.js"></script>
   </head>
-  <body
-    class="bg-gray-100 flex items-center justify-center min-h-screen font-poppins"
-  >
+  <body class="bg-gray-100 flex items-center justify-center min-h-screen font-poppins">
     <div class="bg-white shadow-lg rounded-2xl p-8 w-96 xl:w-auto">
+
       <!-- Logo Placeholder -->
       <!-- <div class="flex justify-center mb-4">
             <img src="logo.png" alt="Logo" class="w-16 h-16"> 
@@ -24,87 +22,28 @@
       <p class="text-gray-500 text-center mb-6">
         Join Quanta Paper Ticketing System
       </p>
-
       <form id="register">
         <div class="grid xl:grid-cols-2 grid-cols-1 gap-4">
           <div class="mb-4">
-            <label
-              class="block text-gray-700 text-sm font-medium mb-2"
-              for="firstname"
-              >First Name</label
-            >
-            <input
-              type="text"
-              id="firstname"
-              name="firstname"
-              placeholder="Enter your first name"
-              class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none"
-              required
-            />
+            <label class="block text-gray-700 text-sm font-medium mb-2" for="firstname">First Name</label>
+            <input type="text" id="firstname" name="firstname" placeholder="Enter your first name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none" required />
           </div>
           <div class="mb-4">
-            <label
-              class="block text-gray-700 text-sm font-medium mb-2"
-              for="lastname"
-              >Last Name</label
-            >
-            <input
-              type="text"
-              id="lastname"
-              name="lastname"
-              placeholder="Enter your last name"
-              class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none"
-              required
-            />
+            <label class="block text-gray-700 text-sm font-medium mb-2" for="lastname">Last Name</label>
+            <input type="text" id="lastname" name="lastname" placeholder="Enter your last name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none" required />
           </div>
         </div>
-
         <div class="mb-4">
-          <label
-            class="block text-gray-700 text-sm font-medium mb-2"
-            for="email"
-            >Email</label
-          >
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Enter your email"
-            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none"
-            required
-          />
+          <label class="block text-gray-700 text-sm font-medium mb-2" for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Enter your email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none" required />
         </div>
-
         <div class="mb-4">
-          <label
-            class="block text-gray-700 text-sm font-medium mb-2"
-            for="username"
-            >Username</label
-          >
-          <input
-            type="text"
-            id="username"
-            name="username"
-            placeholder="Create a username"
-            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none"
-            required
-          />
+          <label class="block text-gray-700 text-sm font-medium mb-2" for="username">Username</label>
+          <input type="text" id="username" name="username" placeholder="Create a username" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none" required />
         </div>
-
         <div class="mb-4">
-          <label
-            class="block text-gray-700 text-sm font-medium mb-2"
-            for="password"
-            >Password</label
-          >
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Create a password"
-            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none"
-            required
-          />
+          <label class="block text-gray-700 text-sm font-medium mb-2" for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="Create a password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none" required />
         </div>
 
         <!-- <div class="mb-4">
@@ -122,35 +61,14 @@
             required
           />
         </div> -->
-
         <div class="mb-4">
-          <label
-            class="block text-gray-700 text-sm font-medium mb-2"
-            for="confirm-password"
-            >Anydesk Ip</label
-          >
-          <input
-            type="text"
-            id="anydesk-ip"
-            name="anydesk-ip"
-            placeholder="Enter anydesk IP"
-            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none"
-            required
-          />
+          <label class="block text-gray-700 text-sm font-medium mb-2" for="confirm-password">Anydesk Ip</label>
+          <input type="text" id="anydesk-ip" name="anydesk-ip" placeholder="Enter anydesk IP" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none" required />
         </div>
-
         <div class="grid xl:grid-cols-2 grid-cols-1 gap-4">
           <div class="mb-4">
-            <label
-              class="block text-gray-700 text-sm font-medium mb-2"
-              for="fullname"
-              >Branch</label
-            >
-            <select
-              name="branch"
-              id="branch"
-              class="w-full rounded-md p-2 border border-gray-300 focus:outline-none focus:ring focus:border-blue-300"
-            >
+            <label class="block text-gray-700 text-sm font-medium mb-2" for="fullname">Branch</label>
+            <select name="branch" id="branch" class="w-full rounded-md p-2 border border-gray-300 focus:outline-none focus:ring focus:border-blue-300">
               <option value="" disabled selected>Select Branch</option>
               <option value="Mandaluyong">Mandaluyong</option>
               <option value="Pampanga">Pampanga</option>
@@ -158,31 +76,12 @@
             </select>
           </div>
           <div class="mb-4" id="other-input-container" style="display: none">
-            <label
-              class="block text-gray-700 text-sm font-medium mb-2"
-              for="other"
-              >Please specify</label
-            >
-            <input
-              type="text"
-              id="other"
-              name="other"
-              placeholder="Enter your option"
-              class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none"
-            />
+            <label class="block text-gray-700 text-sm font-medium mb-2" for="other">Please specify</label>
+            <input type="text" id="other" name="other" placeholder="Enter your option" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:border-blue-400 outline-none" />
           </div>
-
           <div class="mb-4">
-            <label
-              class="block text-gray-700 text-sm font-medium mb-2"
-              for="fullname"
-              >Departments</label
-            >
-            <select
-              name="department"
-              id="department"
-              class="w-full rounded-md p-2 border border-gray-300 focus:outline-none focus:ring focus:border-blue-300"
-            >
+            <label class="block text-gray-700 text-sm font-medium mb-2" for="fullname">Departments</label>
+            <select name="department" id="department" class="w-full rounded-md p-2 border border-gray-300 focus:outline-none focus:ring focus:border-blue-300">
               <option value="" disabled selected>Select Department</option>
               <option value="MIS">MIS</option>
               <option value="CSR">CSR</option>
@@ -194,19 +93,12 @@
             </select>
           </div>
         </div>
-
-        <button
-          type="submit"
-          class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-2 rounded-lg transition duration-300" id="submit-form"
-        >
+        <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-2 rounded-lg transition duration-300" id="submit-form">
           Register
         </button>
-
         <p class="text-gray-600 text-sm text-center mt-4">
           Already have an account?
-          <a href="index.html" class="text-blue-500 font-medium hover:underline"
-            >Login here</a
-          >
+          <a href="index.html" class="text-blue-500 font-medium hover:underline">Login here</a>
         </p>
       </form>
     </div>
