Add some new files and changes

--- a/header.html
+++ b/header.html
@@ -17,11 +17,13 @@
         <!-- Navigation & Sign Out -->
         <div class="flex items-center space-x-6">
           <p class="text-sm md:text-base">Welcome</p>
-          <button
-            class="bg-white text-green-600 px-4 py-2 rounded-full font-semibold hover:bg-green-500 hover:text-white transition duration-300"
-          >
+          
+          <form action="../../queries/logout.php">
+            <button
+            class="bg-white text-green-600 px-4 py-2 rounded-full font-semibold hover:bg-green-500 hover:text-white transition duration-300">
             Sign Out
           </button>
+          </form>
         </div>
       </div>
     </nav>
